--- a/public/style.css
+++ b/public/style.css
@@ -81,3 +81,17 @@ textarea {
 .news-info {
   margin-left: 40px;
 }
+
+.error {
+  text-align: center;
+  justify-content: center;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.errortTitle {
+  color: red
+}
